# stockli

./: Cargo.toml  README.md
src/: api.rs  cli.rs  lib.rs  main.rs  utils.rs  watchlist.rs
