[package]
name = "stockli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossterm = "0.28.1"
dotenv = "0.15.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tui = "0.19.0"
tui-input = "0.11.1"
yata = "0.7.0"
